--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "natours",
+  "name": "trip-buddy",
   "version": "1.0.0",
-  "description": "Learning node express and mongo db",
+  "description": "Trip Buddy backend",
   "main": "app.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js",
+    "start": "node server.js",
+    "start:prod": "cross-env NODE_ENV=production node server.js"
   },
   "author": "Luis Alcaide",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^17.2.1",
-    "express": "^4.21.2",
-    "mongoose": "^5.13.23"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^7.6.3",
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "cross-env": "^7.0.3",
+    "nodemon": "^3.1.0"
   }
 }
