Error handeling, global error handeling in models

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "nodemon --no-deprecation server.js",
-    "start:prod": "cross-env NODE_ENV=production node server.js"
+    "start:prod": "cross-env NODE_ENV=production node server.js",
+    "debug": "ndb server.js"
   },
   "author": "Luis Alcaide",
   "license": "ISC",
