--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "Luis Alcaide",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.22",
     "morgan": "^1.10.1",
     "slugify": "^1.6.6",
