--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^5.13.22",
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.6",
+    "sharp": "^0.34.4",
     "slugify": "^1.6.6",
     "validator": "^13.15.15",
     "xss-clean": "^0.1.4"
