--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
   "author": "Luis Alcaide",
   "license": "ISC",
   "dependencies": {
+    "@react-email/components": "^1.0.0",
+    "@react-email/render": "^2.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -24,7 +26,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.22",
     "morgan": "^1.10.1",
-    "nodemailer": "^7.0.6",
+    "nodemailer": "^7.0.10",
+    "react": "^19.2.0",
     "sharp": "^0.34.4",
     "slugify": "^1.6.6",
     "validator": "^13.15.15",
