--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "react": "^19.2.0",
     "sharp": "^0.34.4",
     "slugify": "^1.6.6",
+    "stripe": "^19.3.1",
     "validator": "^13.15.15",
     "xss-clean": "^0.1.4"
   },
