--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-hot-toast": "^2.6.0",
     "react-leaflet": "^5.0.0",
     "react-router": "^7.9.1",
+    "react-router-dom": "^7.12.0",
     "three": "^0.180.0",
     "vanta": "^0.5.24"
   },
