--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^8.6.1",
     "axios": "^1.12.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
