--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@react-email/components": "^1.0.0",
     "@react-email/render": "^2.0.0",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -26,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.22",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "react": "^19.2.0",
     "sharp": "^0.34.4",
