Last verifications before Heroko

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,33 @@
-FROM node:18-alpine
+FROM node:18 AS build
+WORKDIR /build
+
+# Backend dependencies
+COPY backend/package*.json backend/
+RUN cd backend && npm install --production
+
+# Copy backend source
+COPY backend/ backend/
+
+# Frontend build
+COPY frontend/package*.json frontend/
+# Install frontend deps without optional native packages (avoids rollup native module issue)
+RUN cd frontend && npm install --no-optional --no-audit --no-fund
+COPY frontend/ frontend/
+# Build frontend
+RUN cd frontend && npm run build
+
+# Final runtime image
+FROM node:18
 WORKDIR /app
-COPY package*.json ./
-RUN npm install --no-audit --no-fund
-COPY . .
+
+# copy backend app + node_modules
+COPY --from=build /build/backend /app
+COPY --from=build /build/backend/node_modules /app/node_modules
+
+# copy frontend build
+COPY --from=build /build/frontend/dist /app/frontend/dist
+
+ENV NODE_ENV=production
 EXPOSE 3000
-CMD ["npm", "run", "dev"]
+
+CMD ["node", "server.js"]
