--- a/backend/package.json
+++ b/backend/package.json
@@ -34,7 +34,8 @@
     "slugify": "^1.6.6",
     "stripe": "^19.3.1",
     "validator": "^13.15.15",
-    "xss-clean": "^0.1.4"
+    "xss-clean": "^0.1.4",
+    "compression": "^1.7.4"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
