--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,15 @@ services:
 
   backend:
     build:
-      context: ./backend
+      context: .
+      dockerfile: backend/Dockerfile
     container_name: tripbuddy-backend
     environment:
       PORT: "3000"
       # URL do frontend para CORS
       FRONTEND_URL: "http://localhost:5173"
       # Stripe (copiar o segredo do teu config/env)
-      NODE_ENV: "development"
+      NODE_ENV: "production"
     env_file:
       - ./backend/docker.env
     ports:
@@ -24,10 +25,8 @@ services:
     depends_on:
       - mongo
     volumes:
-      - ./backend:/app
       - backend_node_modules:/app/node_modules
-      - ./backend/public/img:/app/public/img
-    command: sh -c "npm install && npm run dev"
+    command: node server.js
 
   frontend:
     build:
@@ -45,6 +44,19 @@ services:
       - ./frontend:/app
       - frontend_node_modules:/app/node_modules
     command: sh -c "npm install && npm run dev -- --host"
+
+  stripe:
+    image: stripe/stripe-cli:latest
+    container_name: tripbuddy-stripe
+    env_file:
+      - ./backend/docker.env
+    volumes:
+      - ~/.config/stripe:/root/.config/stripe
+    # Avoid docker-compose variable substitution by using $$ so the container expands the env var
+    entrypoint: ["sh", "-c", "stripe listen --forward-to http://backend:3000/api/v1/bookings/webhook-checkout --api-key \"$${STRIPE_SECRET_KEY}\""]
+    depends_on:
+      - backend
+    restart: unless-stopped
 
 volumes:
   mongo_data:
