--- a/package.json
+++ b/package.json
@@ -4,4 +4,8 @@
     "cors": "^2.8.5",
     "multer": "^2.0.2"
   }
+    "scripts": {
+    "start": "node backend/server.js",
+    "heroku-postbuild": "cd frontend && npm install --legacy-peer-deps && npm run build && cd ../backend && npm install --production"
+  }
 }
