Update Dockerfile and add .dockerignore

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,33 +1,24 @@
 FROM node:18 AS build
 WORKDIR /build
 
-# Backend dependencies
+# backend deps
 COPY backend/package*.json backend/
-RUN cd backend && npm install --production
+RUN cd backend && npm ci --production
 
-# Copy backend source
+# copy backend
 COPY backend/ backend/
 
-# Frontend build
-COPY frontend/package*.json frontend/
-# Install frontend deps without optional native packages (avoids rollup native module issue)
-RUN cd frontend && npm install --no-optional --no-audit --no-fund
-COPY frontend/ frontend/
-# Build frontend
-RUN cd frontend && npm run build
+# Use a prebuilt frontend `dist` directory (build locally) to avoid native rollup binary issues
+# Expectation: run `cd frontend && npm ci && npm run build` on the host before building the image
+COPY frontend/dist /build/frontend/dist
 
-# Final runtime image
-FROM node:18
+# final runtime image
+FROM node:18-alpine
 WORKDIR /app
-
-# copy backend app + node_modules
 COPY --from=build /build/backend /app
 COPY --from=build /build/backend/node_modules /app/node_modules
-
-# copy frontend build
 COPY --from=build /build/frontend/dist /app/frontend/dist
-
+COPY --from=build /build/backend/public /app/public
 ENV NODE_ENV=production
 EXPOSE 3000
-
 CMD ["node", "server.js"]
